== Version 0.43 04/08/2008 ==

* Spam, spam, glorious spam.
* Includes a probably very broken machine translated Spanish localization.

== Version 0.[http://en.wikipedia.org/wiki/Ultimate_Question 42] Uploaded 04/02/2008 ==

* Includes a Korean translation that was sent to me.
* Now uses the correct fonts so that non-latin characters display properly.
* Build script now uses the collected IDs from 0.41 to combine data between locales.

== Version 0.41 Uploaded 03/29/2008 ==

* Now collects the IDs of quests, NPCs, and items, using the new QuestLink and UnitGUID functions made availiable in 2.4. If I ever get motivated enough to rewrite QuestHelper, it will use these values.

== Version 0.40 Uploaded 03/29/2008 ==

* The previous version of Astrolabe apparently contained a minor annoyance in which it would lockup the game of anyone attempting to teleport.

== Version 0.39 Uploaded 03/25/2008 ==

* It appears that the 2.4 patch goes live today. Cross your fingers and hope this still works.
* Using the WoW_2.4_Data branch of Astrolabe until everything gets updated.
* I don't know anything about the new zone. QuestHelper has a dummy route linking the existing world to it, but this is just to keep it from breaking, you shouldn't try to follow it.

== Version 0.38 Uploaded 03/18/2008 ==

* Wrote a spider to copy quest data from www.wowguru.com, to suppliment the dwindling supply of non-English quest data.

== Version 0.37 Uploaded 03/15/2008 ==

* Fixed the route through the Dark Portal. The pathing data got calculated before the player's level was set, and thus the route was set to take 24 hours, which was my solution to prevent QuestHelper from directing low level players from wandering into OutLands.
* I think the previous version had all unknown flight times estimated as taking one minute, which I had done while debugging the lockups. It should now be back to reasonably accurate guessing.