@@ -1,6 +1,6 @@
 ## Interface: 20400
 ## Title: QuestHelper
-## Author: smariot, vipersniper
+## Author: smariot, vipersniper, nesher
 ## Notes: Calculates an optimal route for you to follow while questing.
 ## Notes-deDE: Berechnet eine optimale Route für dich, der du während dem Questen folgen kannst.
 ## Version: 0.43
@@ -43,3 +43,4 @@ comm.lua
 help.lua
 pattern.lua
 flightpath.lua
+mapbutton.lua
