@@ -86,6 +86,7 @@ QuestHelper_Translations.enUS =
   TALK_TO_FLIGHT_MASTER = "Please talk to the local flight master.",
   TALK_TO_FLIGHT_MASTER_COMPLETE = "Thanks.",
   WILL_RESET_PATH = "Will reset pathing information.",
+  UPDATING_ROUTE = "Refreshing route",
   
   -- Locale switcher.
   LOCALE_LIST_BEGIN = "Available Locales:",
@@ -190,7 +191,13 @@ QuestHelper_Translations.enUS =
   PEER_PROGRESS = "%1's progress:",
   TRAVEL_ESTIMATE = "Estimated travel time:",
   TRAVEL_ESTIMATE_VALUE = "%t1",
-  WAYPOINT_REASON = "Visit %h1 en route to:"
+  WAYPOINT_REASON = "Visit %h1 en route to:",
+
+  -- QuestHelper Map Button
+  QH_BUTTON_TEXT = "Quest Helper",
+  QH_BUTTON_TOOLTIP1 = "Left Click: %1 routing information",
+  QH_BUTTON_SHOW = "Show",
+  QH_BUTTON_HIDE = "Hide",
  }
 
 QuestHelper_TranslationFunctions.enUS =
